name:                elm-export
version:             0.5.0.2
synopsis:            A library to generate Elm types from Haskell source.
description:         Generate Elm source code automatically from Haskell types. Using GHC.Generics, we can automatically derive Elm type declarations, and Aeson-compatible JSON decoders & encoders.
homepage:            http://github.com/krisajenkins/elm-export
stability:           alpha
license:             OtherLicense
license-file:        LICENSE.txt
author:              Kris Jenkins
maintainer:          kris.jenkins@clearercode.com
copyright:           2015-2016 Kris Jenkins
category:            Web
build-type:          Simple
extra-source-files:  test/*.elm
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     XPort
  build-depends:       base >= 4.7 && < 5
                     , bytestring
                     , containers
                     , directory
                     , formatting
                     , mtl
                     , text
                     , time
  default-language:    Haskell2010
  ghc-options:         -Wall
  other-modules: XPort.Common
                , XPort.Encoder
                , XPort.File
                , XPort.Elm.Elm
                , XPort.Elm.Type
                , XPort.Elm.Decoder
                , XPort.Elm.Encoder
                , XPort.Elm.Record
                , XPort.Elm.Elm
                , XPort.PureScript.PureScript
                , XPort.PureScript.Type
                , XPort.PureScript.Decoder
                -- , XPort.PureScript.Encoder
                , XPort.PureScript.Record

test-suite elm-export-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       Elm.ExportElmSpec
                     , PureScript.ExportSpec
                     , TypesSpec
  build-depends:       QuickCheck
                     , base
                     , bytestring
                     , containers
                     , elm-export
                     , hspec
                     , hspec-core
                     , quickcheck-instances
                     , text
                     , time
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N -Wall
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/krisajenkins/elm-export
